@@ -1,6 +1,6 @@
 use v6;
 use Test;
-plan 6;
+plan 9;
 use LibXML;
 use LibXML::Attr;
 use LibXML::Dtd;
@@ -68,5 +68,46 @@ EOF
 is $level, +XML_ERR_WARNING;
 is $message, 'failed to load external entity "test.dtd"';
 
-##warn $dtd.Str;
-##warn $doc.getInternalSubset.Str;
+subtest 'doc with internal dtd' => {
+    plan 7;
+    $doc .= parse: :file<test/dtd/note-internal-dtd.xml>;
+    nok $doc.getExternalSubset.defined, 'no external DtD';
+    my LibXML::Dtd $dtd = $doc.getInternalSubset;
+    ok $dtd.defined, 'has DtD';
+    ok $dtd.validate, 'validate';
+    is $dtd.name, "note", '.name';
+    nok $dtd.systemId.defined, 'sans systemId';
+    nok $dtd.publicId.defined, 'sans publicId';
+    is-deeply $dtd.is-XHTML, Bool, 'is-XHTML';
+}
+
+subtest 'doc with external dtd loaded' => {
+    plan 8;
+    $doc .= parse: :file<test/dtd/note-external-dtd.xml>, :dtd;
+    ok $doc.getExternalSubset.defined, 'external DtD';
+    my LibXML::Dtd $dtd = $doc.getInternalSubset;
+    ok $dtd.defined, 'has DtD';
+    ok $doc.validate($dtd), 'doc.validate';
+    ok $dtd.validate($doc), 'dtd.validate';
+    is $dtd.name, "note", '.name';
+    is $dtd.systemId, "note.dtd", 'systemId';
+    nok $dtd.publicId.defined, 'sans publicId';
+    is-deeply $dtd.is-XHTML, False, 'is-XHTML';
+}
+
+subtest 'doc with no dtd loaded' => {
+    plan 9;
+    my LibXML::Document $other-doc .= parse: :file<test/dtd/note-external-dtd.xml>, :dtd;
+    $doc .= parse: :file<test/dtd/note-no-dtd.xml>;
+    dies-ok {$doc.setExternalSubset: $other-doc.getExternalSubset}, 'set uncloned Dtd';
+    $doc.setExternalSubset: $other-doc.getExternalSubset.clone;
+    ok $doc.getExternalSubset.defined, 'external DtD';
+    my LibXML::Dtd $dtd = $doc.getExternalSubset;
+    ok $dtd.defined, 'has DtD';
+    ok $doc.validate($dtd), 'doc.validate';
+    ok $dtd.validate($doc), 'dtd.validate';
+    is $dtd.name, "note", '.name';
+    is $dtd.systemId, "note.dtd", 'systemId';
+    nok $dtd.publicId.defined, 'sans publicId';
+    is-deeply $dtd.is-XHTML, False, 'is-XHTML';
+}
